hphp/hack/test/typecheck/const_attribute/static/unset_const_prop.php.exp
File "unset_const_prop.php", line 28, characters 3-32:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
File "unset_const_prop.php", line 17, characters 19-22:
Cannot mutate a `__Const` property (Typing[4196])
File "unset_const_prop.php", line 18, characters 18-19:
Cannot mutate a `__Const` property (Typing[4196])
File "unset_const_prop.php", line 27, characters 12-15:
Cannot mutate a `__Const` property (Typing[4196])
File "unset_const_prop.php", line 28, characters 12-15:
Cannot mutate a `__Const` property (Typing[4196])
File "unset_const_prop.php", line 28, characters 24-27:
Cannot mutate a `__Const` property (Typing[4196])
File "unset_const_prop.php", line 29, characters 12-16:
Cannot mutate a `__Const` property (Typing[4196])
File "unset_const_prop.php", line 34, characters 12-15:
Cannot mutate a `__Const` property (Typing[4196])
File "unset_const_prop.php", line 33, characters 9-14:
Cannot access static properties on reified generics (Typing[4346])
File "unset_const_prop.php", line 34, characters 9-15:
Cannot access static properties on reified generics (Typing[4346])
